--- a/plugins/auth-backend/package.json
+++ b/plugins/auth-backend/package.json
@@ -36,6 +36,7 @@
     "@backstage/config": "^0.1.11",
     "@backstage/errors": "^0.1.5",
     "@backstage/test-utils": "^0.2.0",
+    "@backstage/types": "^0.1.1",
     "@google-cloud/firestore": "^4.15.1",
     "@types/express": "^4.17.6",
     "@types/passport": "^1.0.3",
@@ -46,7 +47,7 @@
     "express-promise-router": "^4.1.0",
     "express-session": "^1.17.1",
     "fs-extra": "9.1.0",
-    "google-auth-library": "^7.2.0",
+    "google-auth-library": "^7.6.1",
     "got": "^11.5.2",
     "helmet": "^4.0.0",
     "jose": "^1.27.1",
