--- a/packages/catalog-model/examples/systems/hisham-system.yaml
+++ b/packages/catalog-model/examples/systems/hisham-system.yaml
@@ -2,7 +2,7 @@ apiVersion: backstage.io/v1alpha1
 kind: System
 metadata:
   name: hisham
-  description: Hisham's System
+  description: Hisham System
 spec:
   owner: team-b
   domain: playback
